# TreePaunchBot

./: .gitignore  README.md  main.py  observer.py  pyproject.toml  streamobserver.py
Data/: holidays.json  todos.json  watchlist.json
OtherFiles/: todo_util.py  todos.json
cogs/: Eval.py  Fun.py  HolidayObserver.py  Listeners.py  StreamObserver.py  Todo.py  Watchlist.py  fun.py  listeners.py  todo.py
config/: config.py
etc/: mobile_indicator.py  webserver.py
util/: main_util.py  todo_util.py
